# prompt-clipboard

./: .gitignore  AUTHORS.md  CHANGELOG.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
docs/: BRD.md  PUBLISHING.md  RELEASE_CHECKLIST.md  technical-stack-and-architecture.md  user-stories-and-acceptance.md
docs/project_rules/: development-rules.md  git-commit-rules.json  git-commit-rules.md
src/prompt_clipboard/: add_prompt_dialog.py  database.py  edit_prompt_dialog.py  hotkey.py  main.py  prompt_manager_window.py  settings_window.py
src/prompt_clipboard/config/: __init__.py  logging.py  settings.py
