[project]
name = "prompt-clipboard"
version = "0.1.0"
description = "A clipboard manager for AI prompts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pynput>=1.8.1",
    "pyperclip>=1.11.0",
    "pyside6>=6.10.0",
    "sqlmodel>=0.0.27",
    "loguru>=0.7.0",
    "pydantic-settings>=2.11.0",
    "appdirs>=1.4.0",
]

[build-system]
requires = ["uv_build>=0.9.0"]
build-backend = "uv_build"

[project.scripts]
prompt-clipboard = "prompt_clipboard.main:main"
